Adding getCategories pagination
